# python_labs

./: README.md
data/lab04/: report.csv
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv  students_n.csv
data/samples/: broken.json  cities.csv  example.txt  people.csv  people.json
lab03/: text_stats.py
lab1/: 01_greeting.py  05_initials_and_len.py
lab2/: arrays.py  matrix.py  tuple.py
src/: pyproject.toml
src/lab03/: text_stats.py
src/lab04/: io_txt_csv.py  text_report.py
src/lab04/data/: input.txt  output.csv
src/lab05/: csv_xlsx.py  json_csv.py
src/lab06/: cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  models.py  serialize.py  students_input.json  students_output.json  test_models_serialize.py
src/lab09/: README.md  __init__.py  group.py  test_group.py
src/lab1/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py
src/lab10/: README.md  linked_list.py  structures.py  tests_lb10.py
src/lab2/: arrays.py  matrix.py  tuple.py
src/lib/: io_helpers.py  text.py
tests/: test_json_csv.py  test_models.py  test_serialize.py  test_text.py
tests/__pycache__/: test_json_csv.py  test_models.py  test_serialize.py
